package Seminar2;

public interface RunSpeed {
    int runSpeed();
}
