package Seminar2;

public interface Soundable {
    String getSound();
}
