package Seminar2.base;

import Seminar2.base.Animal;

public abstract class Amphibian extends Animal {
    public Amphibian (String name){
        super(name);
    }
}
