package Seminar2.base;

import Seminar2.base.Animal;

public abstract class Snake extends Animal {
    public Snake (String name){
        super(name);
    }

}
